--- a/goDoctor/package.json
+++ b/goDoctor/package.json
@@ -20,6 +20,7 @@
     "react-icons": "^5.4.0",
     "react-router-dom": "^6.28.2",
     "react-toastify": "^11.0.3",
+    "sonner": "^1.7.4",
     "swiper": "^11.2.1",
     "yup": "^1.6.1"
   },
