--- a/admin/.env
+++ b/admin/.env
@@ -29,4 +29,4 @@ ADMIN_PASSWORD = 'admin123'
 
 JWT_SECRET = 'goDoctor'
 
-VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_BACKEND_URL = 'https://godoctor-backend.onrender.com'
