--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,8 @@ ADMIN_PASSWORD = 'admin123'
 
 JWT_SECRET = 'goDoctor'
 
-VITE_BACKEND_URL = 'http://localhost:5000'
+# VITE_BACKEND_URL = 'http://localhost:5000'
+VITE_BACKEND_URL = 'https://godoctor-backend.onrender.com'
 
 RAZORPAY_KEY = 'rzp_test_QniRKppOBblpJa'
 RAZORPAY_SECRET = 'qPL2juNuAO5oVGj1fnsHDyY6'
