--- a/backend/.env
+++ b/backend/.env
@@ -25,4 +25,5 @@ NODE_ENV = 'development'
 SESSION_SECRET = 'session_secret_key'
 
 
-GOOGLE_CALLBACK_URL = "http://localhost:5000/auth/google/callback"
+GOOGLE_CALLBACK_URL = "https://godoctor-backend.onrender.com/auth/google/callback"
+FRONTEND_URL = "https://godoctor-frontend.onrender.com"
