new google credentials

--- a/backend/.env
+++ b/backend/.env
@@ -17,13 +17,20 @@ VITE_BACKEND_URL = 'https://godoctor-backend.onrender.com'
 RAZORPAY_KEY = 'rzp_test_QniRKppOBblpJa'
 RAZORPAY_SECRET = 'qPL2juNuAO5oVGj1fnsHDyY6'
 
-GOOGLE_CLIENT_ID = "56119663076-oapcbtntjguq867np9fslgd8p4q94ds5.apps.googleusercontent.com"
-GOOGLE_CLIENT_SECRET = "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"
+# GOOGLE_CLIENT_ID = "56119663076-oapcbtntjguq867np9fslgd8p4q94ds5.apps.googleusercontent.com"
+
+GOOGLE_CLIENT_ID = "56119663076-32am2qis2mts8jgaj8fs5scpij7f5pv6.apps.googleusercontent.com"
+
+# GOOGLE_CLIENT_SECRET = "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"
+
+GOOGLE_CLIENT_SECRET = "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"
 
 NODE_ENV = 'development'
 
 SESSION_SECRET = 'session_secret_key'
 
+# GOOGLE_CALLBACK_URL=http://localhost:5000/auth/google/callback
 
 GOOGLE_CALLBACK_URL = "https://godoctor-backend.onrender.com/auth/google/callback"
+CLIENT_ORIGIN=http://localhost:5173
 FRONTEND_URL = "https://godoctor-frontend.onrender.com"
